phase2/test/test_12012013_1.out
Error type 7 at Line 12: binary operation on non-number variables
